Fix wiki infobox on mobile, other style tweaks

--- a/assets/scss/_style_wiki.scss
+++ b/assets/scss/_style_wiki.scss
@@ -33,12 +33,9 @@
 	background-color: #e8e8e8;
 	border: 1px solid #888;
 	text-align: center;
-	width: 30%;
-	float: right;
-	clear: both;
-	margin-top: -65px;
-	margin-left: 25px;
-	margin-right: 15px;
+	min-width: 300px;
+	margin-left: 40px;
+	margin-right: 40px;
 	margin-bottom: 25px;
 
 	table {
@@ -75,6 +72,14 @@
 		td, th {
 			padding: 10px;
 		}
+	}
+
+	@media screen and (min-width: 700px) {
+		margin-top: -65px;
+		margin-left: 25px;
+		margin-right: 0;
+		float: right;
+		clear: both;
 	}
 }
 
