--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -432,6 +432,11 @@ form.reglog {
 		padding: 10px 5px;
 	}
 
+	tr th {
+		background-color: #fafafa;
+		font-size: 11.5pt;
+	}
+
 	tr {
 		&:nth-child(odd)  { background-color: #f5f5f5; }
 		&:nth-child(even) { background-color: #e8e8e8; }
@@ -503,7 +508,7 @@ form.reglog {
 	}
 
 	.row {
-		border-top: 1px solid #bbb;
+		border-top: 1px solid $grid;
 		padding: 10px;
 		display: block;
 
